fixed bug on register page where white space would appear behind container elements

--- a/current-app-wd/src/app/auth/register.component.css
+++ b/current-app-wd/src/app/auth/register.component.css
@@ -1,6 +1,8 @@
 .container-fluid {
 	background-color: #5CB85C;
 	height: 100vh;
+	min-height: 800px;
+	width: 100%;
 }
 
 .logo-container {
